--- a/static/queryParams.html
+++ b/static/queryParams.html
@@ -32,10 +32,10 @@
 
     <footer class="toolbar toolbar-footer" style="position: fixed; bottom: 0; width: 100%;">
       <div class="toolbar-actions">
-        <button id="btnPrevApiKey" class="btn btn-transparent">
+        <button id="btnPrev" class="btn btn-transparent">
           <i style="font-size: 2em; margin-right: 8px; vertical-align: middle;" class="fa fa-fw fa-angle-left"></i> Select input data file
         </button>
-        <button id="btnNextMapColumns" class="btn btn-primary btn-mapzen pull-right">
+        <button id="btnNext" class="btn btn-primary btn-mapzen pull-right">
           Map data columns <i style="font-size: 2em; margin-right: 8px; vertical-align: middle;" class="fa fa-fw fa-angle-right"></i>
         </button>
       </div>
