prettyfication in full swing

--- a/static/progressMap.html
+++ b/static/progressMap.html
@@ -23,22 +23,50 @@
     <style>
       #map {
         margin-top: 3%;
-        height: 80%;
+        height: 70%;
         width: 90%;
         position: absolute;
+        top: 15%;
+        left: 5%;
       }
-      html,body{margin: 0; padding: 0;}
+      #progress-text {
+        text-align: center;
+        display: inline-block;
+        vertical-align: middle;
+        line-height: normal;
+        line-height: 50px;
+        width: 100%;
+      }
+      #progress-total {
+        width: 100%;
+        background-color: #f8f8f8;
+      }
+      #progress-done {
+        height: 50px;
+        width: 0%;
+        background-color: #1e0e33; 
+        color: #f8f8f8;
+      }
+      .button-icons {
+        font-size: 2em;
+        margin-right: 8px;
+        vertical-align: middle;
+      }
+      html,body{margin-top: 0px; margin: 0; padding: 0;}
     </style>
 
   </head>
-  <body id="body" style="margin-top: 0px;">
+  <body id="body">
+
+  <div id="progress" class="row">
+      <div id="progress-total" class="col-md-10 col-lg-10">
+        <div id="progress-done" class="col-md-10 col-lg-10"></div>
+      </div>
+    </div>
 
     <div class="container">
       <div class="row">
         <div id="map"></div>
-      </div>
-      <div class="row">
-        <p id="progress" class="caption">Processing...</p>
       </div>
     </div> <!-- container -->
 
