--- a/static/selectInputData.html
+++ b/static/selectInputData.html
@@ -29,7 +29,7 @@
     <footer class="toolbar toolbar-footer" style="position: fixed; bottom: 0; width: 100%;">
       <div class="toolbar-actions">
         <button id="btnPrev" class="btn btn-transparent">
-          <i class="button-icons fa fa-fw fa-angle-left"></i> Select input data file
+          <i class="button-icons fa fa-fw fa-angle-left"></i> Select API Key
         </button>
         <button id="btnNext" class="btn btn-primary btn-mapzen pull-right">
           Map data columns <i class="button-icons fa fa-fw fa-angle-right"></i>
