--- a/static/selectColumns.html
+++ b/static/selectColumns.html
@@ -16,7 +16,12 @@
       <p style="color: #f8f8f8">Select the columns to be used as input to the geocoder</p>
     </div>
 
-    <div id="table-container" class="container">
+    <div style="margin: auto; width: 80%; word-wrap: break-word;">
+      <h4>Specify the mapping of each column in your data to the geocoding parameters:</h4>
+      <a href="https://mapzen.com/documentation/search/">Read more about parameters.</a>
+    </div>
+
+    <div id="table-container" class="container" style="margin: 20px;">
       <div id="tableWrapper" class="table-wrapper">
         <table id="inputDataPreview" class="table">
         </table>
