--- a/static/selectColumns.html
+++ b/static/selectColumns.html
@@ -18,7 +18,7 @@
 
     <div style="margin: auto; width: 80%; word-wrap: break-word;">
       <h4>Specify the mapping of each column in your data to the geocoding parameters:</h4>
-      <a href="https://mapzen.com/documentation/search/">Read more about parameters.</a>
+      <a id="doc-link" onclick="openDocumentation()">Read more about parameters.</a>
     </div>
 
     <div id="table-container" class="container" style="margin: 20px;">
