--- a/static/selectColumns.html
+++ b/static/selectColumns.html
@@ -33,11 +33,11 @@
 
     <footer class="toolbar toolbar-footer" style="position: fixed; bottom: 0; width: 100%;">
       <div class="toolbar-actions">
-        <button id="btnPrev" class="btn btn-transparent">
+        <button id="btnPrev" class="btn btn-transparent" onclick="onPrevious()">
           <i class="button-icons fa fa-fw fa-angle-left"></i> Select input data file
         </button>
-        <button id="btnNext" class="btn btn-primary btn-mapzen pull-right">
-          Start Processing <i class="button-icons fa fa-fw fa-angle-right"></i>
+        <button id="btnNext" class="btn btn-primary btn-mapzen pull-right" onclick="onNext()">
+          Review <i class="button-icons fa fa-fw fa-angle-right"></i>
         </button>
       </div>
     </footer>
