style changes galore

--- a/static/progressMap.html
+++ b/static/progressMap.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Mapzen Search</title>
+    <title>Mapzen Batch Geocoder</title>
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="../dist/css/photon.min.css">
@@ -19,8 +19,8 @@
   </head>
   <body id="body">
 
-    <div id="title-bar">
-      <p style="color: #f8f8f8">Geocoding in progress</p>
+    <div class="row" id="title-bar">
+      <h3>Geocoding in progress</h3>
     </div>
 
     <div id="map-container">
