--- a/static/queryParams.html
+++ b/static/queryParams.html
@@ -2,16 +2,16 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Mapzen Search</title>
+    <title>Mapzen Batch Geocoder</title>
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="../dist/css/photon.min.css">
 
     <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
     <link rel="stylesheet" href="https://mapzen.com/common/styleguide/styles/styleguide.css">
-    
+
   </head>
-  <body id="body" style="margin-top: 0px;">
+  <body id="body">
 
     <div class="container">
       <div class="row">
