--- a/static/selectColumns.html
+++ b/static/selectColumns.html
@@ -2,18 +2,18 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Mapzen Search</title>
+    <title>Mapzen Batch Geocoder</title>
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="../dist/css/photon.min.css">
     <link rel="stylesheet" href="https://mapzen.com/common/styleguide/styles/styleguide.css">
     <link rel="stylesheet" href="../css/common.css">
-    
+
   </head>
   <body id="body">
 
-    <div id="title-bar">
-      <p style="color: #f8f8f8">Select the columns to be used as input to the geocoder</p>
+    <div class="row" id="title-bar">
+      <h3>Select the columns to be used as input to the geocoder</h3>
     </div>
 
     <div style="margin: auto; width: 80%; word-wrap: break-word;">
@@ -27,7 +27,7 @@
         </table>
       </div> <!-- table-wrapper -->
       <div id="showingPreview">
-        
+
       </div>
     </div> <!-- container -->
 
