--- a/static/review.html
+++ b/static/review.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Mapzen Search</title>
+    <title>Mapzen Batch Geocoder</title>
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="../dist/css/photon.min.css">
@@ -12,8 +12,8 @@
   </head>
   <body id="body" onload="onLoad()">
 
-    <div id="title-bar">
-      <p>Review Batch Summary</p>
+    <div class="row" id="title-bar">
+      <h3>Review Batch Summary</h3>
     </div>
 
     <div class="table-container headroom-large">
@@ -62,7 +62,7 @@
         </div>
       </div>
     </div>
-    
+
     <footer class="toolbar toolbar-footer" style="position: fixed; bottom: 0; width: 100%;">
       <div class="toolbar-actions">
         <button id="btnPrev" class="btn btn-transparent" onclick="onPrevious()">
