--- a/static/review.html
+++ b/static/review.html
@@ -40,7 +40,7 @@
 
     <div class="review-table">
       <p class="text-center caption">
-        All of these numbers are rough estimates. For more accurate pricing please consult the
+        * These numbers are rough estimates. For more accurate pricing please consult the
           <a onclick="onPricingDetails()">geocoding pricing page</a> and your
           <a onclick="onAccountDetails()">Mapzen Developer Dashboard</a>.
         </i>
