--- a/static/apiKey.html
+++ b/static/apiKey.html
@@ -13,7 +13,7 @@
   <body id="body">
 
     <div class="row" id="title-bar">
-      <h3>Please select an API key</h3>
+      <h3>Choose API key</h3>
     </div>
 
     <div class="container headroom-large footroom-extra-large">
@@ -42,10 +42,9 @@
       </div>
     </div>
 
-    <footer class="toolbar toolbar-footer" style="position: fixed; bottom: 0; width: 100%;">
+    <footer class="toolbar toolbar-footer">
       <div class="toolbar-actions">
-        <button id="btnNext" class="btn btn-primary pull-right">
-            Select file <i class="button-icons fa fa-fw fa-angle-right"></i>
+        <button id="btnNext" class="btn btn-primary pull-right">Select files<i class="button-icons fa fa-fw fa-angle-right"></i>
         </button>
       </div>
     </footer>
