--- a/static/intro.html
+++ b/static/intro.html
@@ -20,7 +20,7 @@
       <p>Before we get started, please <strong>sign up</strong> or <strong>sign in</strong> with your Mapzen Developer account.</p>
     </div>
 
-    <footer class="toolbar toolbar-footer" style="position: fixed; bottom: 0; width: 100%;">
+    <footer class="toolbar toolbar-footer">
       <div class="toolbar-actions">
         <button id="btnNext" class="btn btn-primary pull-right" onclick="onLogin()">
             Sign up / Sign in <i class="button-icons fa fa-fw fa-angle-right"></i>
