--- a/static/queryParams.html
+++ b/static/queryParams.html
@@ -30,7 +30,7 @@
       </div> <!-- row -->
     </div> <!-- container -->
 
-    <footer class="toolbar toolbar-footer" style="position: fixed; bottom: 0; width: 100%;">
+    <footer class="toolbar toolbar-footer">
       <div class="toolbar-actions">
         <button id="btnPrev" class="btn btn-transparent">
           <i style="font-size: 2em; margin-right: 8px; vertical-align: middle;" class="fa fa-fw fa-angle-left"></i> Select input data file
