--- a/static/selectInputData.html
+++ b/static/selectInputData.html
@@ -13,7 +13,7 @@
   <body id="body">
 
     <div class="row" id="title-bar">
-      <h3>Select input and output</h3>
+      <h3>Select files</h3>
     </div>
 
     <div class="container headroom-large footroom-extra-large">
@@ -33,13 +33,13 @@
       </div>
     </div>
 
-    <footer class="toolbar toolbar-footer" style="position: fixed; bottom: 0; width: 100%;">
+    <footer class="toolbar toolbar-footer">
       <div class="toolbar-actions">
         <button id="btnPrev" class="btn btn-transparent">
-          <i class="button-icons fa fa-fw fa-angle-left"></i> Select API Key
+          <i class="button-icons fa fa-fw fa-angle-left"></i> Choose API Key
         </button>
         <button id="btnNext" class="btn btn-primary btn-mapzen pull-right">
-          Map data columns <i class="button-icons fa fa-fw fa-angle-right"></i>
+          Preview data <i class="button-icons fa fa-fw fa-angle-right"></i>
         </button>
       </div>
     </footer>
